# MiniBot

./: .gitignore  BOM Walter.xlsx  README.md  bom.xlsx  cheatsheet_installation.txt
CAD/: Arm V2.iam  Arm.iam  Base.iam  Base.ipt  Base_Shrinkwrap.ipt  Elbow V2.iam  Elbow.iam  Forearm.iam  Forearm.ipt  ForearmShaft.ipt  Forearm_Shrinkwrap.ipt  MiniBot.ipj  Shoulder.iam  Shoulder.ipt  Shoulder_Shrinkwrap.ipt  Upperarm.iam  Upperarm.ipt  Upperarm_Shrinkwrap.ipt  Wrist.iam  Wrist.ipt  WristFlange.ipt  WristGear.iam  dimensions.xlsx
CAD/WristGear/Konstruktions-Assistent/: Stirnräder2.iam  Stirnzahnrad12.ipt  Stirnzahnrad22.ipt
CAD/cycloidal gear/source/: 12x6x4 bearing.ipt  18x12x4 bearing.ipt  45x58x7 bearing.ipt  5008_Motor.iam  8x5x2.5 bearing.ipt  Main_equation_fixed_9mm.ipt  Parameters.xlsx  Projektname.ipj  ab_output_in.ipt  ab_output_out.ipt  ant-backlash.iam  encoder in 6809_ab.ipt  encoder_bearing_holder18_6mm_45.ipt  eq_Outer_main.ipt  inner_rods.ipt  motor 6809 flux.ipt  motor 6809 stator.ipt  motor 6809 top.ipt  motor_6809_ab.ipt  motor_shaft-ab.ipt  offset 6id 12- od 9mm.ipt  shaft_magnet_holder.ipt
CAD/gripper/: Base - Copy.ipt  Base.iam  Base.ipt  Centre.ipt  Enclosure.ipt  Finger.iam  FingerEnclosure.ipt  Finger_Shrinkwrap.ipt  FinrayShaft.ipt  GripTypeLever.ipt  Gripper.iam  GripperCompensator.ipt  Gripper_Shrinkwrap.ipt  Lever.ipt  Pinion Rack M 0.9.ipt
CAD/stl/: Wrist-left.stl  Wrist-right.stl
code/ros/minibot/: CMakeLists.txt  package.xml
code/ros/minibot/include/: constants.h  database.h  dispatcher.h  execution.h  globals.h  kinematics.h  marker.h  node.h  planner.h  trap_velocity_profile.h  uniform_sample_filter.h  utils.h
code/ros/minibot/launch/: backend.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  minibot.launch  mongo.launch  move_group.launch  moveit.rviz  moveit_empty.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  roswww.launch  sensor_manager.launch.xml  start.launch  trajectory_execution.launch.xml  tutorial.launch  upload_minibot.launch  urdf.rviz  vis_urdf.launch
code/ros/minibot/launch/moveit/: demo.launch  demo_chomp.launch  minibot_control_moveit_rviz.launch  minibot_moveit.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  run_benchmark_trajopt.launch  setup_assistant.launch  warehouse.launch
code/ros/minibot/msg/: Action.msg  ClientAction.msg  Configuration.msg  ErrorCodes.msg  GlobalPlan.msg  JointStateConfiguration.msg  LocalPlan.msg  MinibotPose.msg  MinibotState.msg  PoseStorage.msg  Statement.msg
code/ros/minibot/scripts/: constants.py  core.py  database.py  markers.py  moveit_tutorial.py  planning.py
code/ros/minibot/src/: database.cpp  dispatcher.cpp  execution.cpp  globals.cpp  kinematics.cpp  marker.cpp  message_store.cpp  node.cpp  planner.cpp  trajectory_blended.cpp  trajectory_cartesian.cpp  trajectory_lin.cpp  trajectory_ptp.cpp  trap_velocity_profile.cpp  uniform_sample_filter.cpp  utils.cpp
code/ros/minibot/srv/: Database.srv  GetPositionAllFK.srv  GetPositionAllIK.srv  PlanningAction.srv  SetProgramme.srv
code/ros/minibot/www/: basiclayout.html  constants.js  index.html  kinematics.js  kinematicsPanel.js  poseStorePanel.js  programmePanel.js  robotPanel.js  settingsPanel.js  utils.js
code/ros/minibot_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
code/ros/minibot_ikfast_plugin/: CMakeLists.txt  minibot_minibot_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
code/ros/minibot_moveit_config/: CMakeLists.txt  package.xml
code/ros/minibot_moveit_plugin/: CMakeLists.txt  minibot_moveit_plugin_interface_description.xml  (+1 more)
docs/images/: logo.pptx
theory/: Kinematik.xlsx
(+61 files in other folders)
