<?xml version="1.0"?>
<package format="2">
  <name>minibot</name>
  <version>0.0.0</version>
  <description>The minibot package</description>

  <maintainer email="jochen.alt@gmx.net">jochenalt</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/jochenalt/minibot</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> 
  <depend>rospy</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend> 
  <depend>industrial_core</depend> 

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>minibot_msgs</depend>
  <depend>message_generation</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>message_runtime</depend>
  <depend>eigen</depend>
  <depend>minibot_ikfast_plugin</depend>

</package>
